Bug 958549 - Don't move scroll indicators for empty container layers. r=kats, a=1.3+

If we've applied an async transform to an empty container layer (e.g. a layer
that corresponds to an nsDisplayScrollInfo display item), don't use that
transform on the corresponding scrollbar.